test/corpus/foreign_declarations.txt
================================================================================
map_impl
================================================================================
module Test exports (..);

foreign map_impl : (Array(a), (a) -> b) -> Array(b);
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (foreign_value_declaration
    name: (value_declaration_name)
    type_annotation: (type_annotation
      (type_function
        parameter: (type_call
          function: (type_constructor)
          argument: (type_variable))
        parameter: (type_function
          parameter: (type_variable)
          return_type: (type_variable))
        return_type: (type_call
          function: (type_constructor)
          argument: (type_variable))))))
