test/corpus/imports.txt
================================================================================
self
================================================================================
module Test exports (..);

import Stuff;
import More.Stuff;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  import: (module_import
    module_name: (module_name))
  import: (module_import
    module_name: (module_name)))

================================================================================
package
================================================================================
module Test exports (..);

import (some-pkg) Some.Module;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  import: (module_import
    package: (module_import_package)
    module_name: (module_name)))

================================================================================
aliased
================================================================================
module Test exports (..);

import (some-pkg) SomeModule as SM;
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  import: (module_import
    package: (module_import_package)
    module_name: (module_name)
    alias: (module_import_alias)))

================================================================================
explicit list
================================================================================
module Test exports (..);

import Some.Other.Module (foo, bar, Baz, Foo(..));
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  import: (module_import
    module_name: (module_name)
    imports: (exposing_list
      (exposing_value)
      (exposing_value)
      (exposing_type
        (exposing_type_name))
      (exposing_type
        (exposing_type_name)
        (exposing_type_constructors)))))
