test/corpus/module_header.txt
================================================================================
exports everything
================================================================================
module Foo exports (..);
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything)))

================================================================================
export list
================================================================================
module Foo.Bar.Baz exports (foo, bar, Baz, Foo(..));
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_list
      (exposing_value)
      (exposing_value)
      (exposing_type
        (exposing_type_name))
      (exposing_type
        (exposing_type_name)
        (exposing_type_constructors)))))
