test/corpus/record_update.txt
================================================================================
single update
================================================================================
module Test exports (..);

x = { x | foo = unit };
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_update
      target: (expression_variable
        (expression_variable_name))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_unit)))))

================================================================================
multiple update
================================================================================
module Test exports (..);

x = { x | foo = unit, bar = true, baz = 22, };
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_update
      target: (expression_variable
        (expression_variable_name))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_unit))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_true))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_int)))))

================================================================================
qualified update
================================================================================
module Test exports (..);

x = { SomeModule.r | foo = unit, bar = true, baz = 22, };
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_update
      target: (expression_variable
        (qualifier)
        (expression_variable_name))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_unit))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_true))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_int)))))

================================================================================
nested update
================================================================================
module Test exports (..);

x = { r | a =  { r.a | b = { r.a.b | c = true } } };
--------------------------------------------------------------------------------

(source_file
  header: (module_header
    module_name: (module_name)
    exports: (exposing_everything))
  declaration: (value_declaration
    name: (value_declaration_name)
    expression: (expression_record_update
      target: (expression_variable
        (expression_variable_name))
      field: (expression_record_field
        label: (expression_record_field_label)
        value: (expression_record_update
          target: (expression_record_access
            (expression_variable
              (expression_variable_name))
            (expression_record_field_label))
          field: (expression_record_field
            label: (expression_record_field_label)
            value: (expression_record_update
              target: (expression_record_access
                (expression_record_access
                  (expression_variable
                    (expression_variable_name))
                  (expression_record_field_label))
                (expression_record_field_label))
              field: (expression_record_field
                label: (expression_record_field_label)
                value: (expression_true)))))))))
